# artemis

./: README.md  artemis.cabal
spec/: spec.hs
src/Control/Arrow/: Artemis.hs
src/Control/Arrow/Artemis/: Build.hs  CompatPrelude.hs  Modification.hs  Parse.hs  Type.hs
